Attempting to fix reason icon size scaling issue on smaller devices

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ body{
 .reason-icon{
     margin: 6px;
     height: 90%;
-    max-width: 20vw; 
+    max-width: 16vw; 
 }
 
 .reason-text
